# gpt-cli

./: Cargo.toml
src/: api.rs  chat.rs  cli.rs  main.rs  spinner.rs
