[package]
name = "gpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
async-openai = "0.9.4"
tokio = { version = "1.25.0", features = ["full"] }
